# aqua-engine

./: .gitignore  ADevice.cpp  ADevice.hpp  ARenderPass.cpp  ARenderPass.hpp  ATexture.cpp  ATexture.hpp  ATextureSampler.cpp  ATextureSampler.hpp  AVulkanHelper.cpp  AVulkanHelper.hpp  CMakeLists.txt  Defines.hpp  README.md  application.cpp  application.hpp  aqua_window.cpp  aqua_window.hpp  buffer.cpp  buffer.hpp  camera.cpp  camera.hpp  compile_shader.sh  compile_shader_win.bat  descriptor.cpp  descriptor.hpp  device.cpp  device.hpp  frame_info.hpp  game_object.cpp  game_object.hpp  keyboard_movement.cpp  keyboard_movement.hpp  main.cpp  model.cpp  model.hpp  pipeline.cpp  pipeline.hpp  renderer.cpp  renderer.hpp  (+5 more)
Resources/shaders/: simple_shader.frag  simple_shader.vert  simple_shader.vert.spv
Textures/: ATexture.cpp  ATexture.hpp
shaders/: simple_shader.frag  simple_shader.frag.spv  simple_shader.vert  simple_shader.vert.spv
vendors/: stb_image.h  tiny_obj_loader.h
